@@ -9,8 +9,8 @@
   <url>http://maven.apache.org</url>
 
 <!--  <properties>-->
-<!--    <maven.compiler.source>1.8</maven.compiler.source>-->
-<!--    <maven.compiler.target>1.8</maven.compiler.target>-->
+<!--    <maven.compiler.source>21</maven.compiler.source>-->
+<!--    <maven.compiler.target>21</maven.compiler.target>-->
 <!--  </properties>-->
 
   <dependencies>
@@ -24,28 +24,16 @@
     </dependency>
 
 
-    <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+
+
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin &ndash;&gt;-->
 <!--    <dependency>-->
-<!--      <groupId>jakarta.servlet</groupId>-->
-<!--      <artifactId>jakarta.servlet-api</artifactId>-->
-<!--      <version>6.0.0</version>-->
-<!--      <scope>provided</scope>-->
+<!--      <groupId>org.apache.maven.plugins</groupId>-->
+<!--      <artifactId>maven-compiler-plugin</artifactId>-->
+<!--      <version>3.10.1</version>-->
+
 <!--    </dependency>-->
-
-
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-clean-plugin</artifactId>
-      <version>3.3.2</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.10.1</version>
-    </dependency>
 
 
     <dependency>
@@ -89,19 +77,17 @@
         <groupId>org.apache.maven.plugins </groupId>
         <artifactId>maven-surefire-plugin </artifactId>
         <version>2.22.2 </version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-          <testFailureIgnore>true</testFailureIgnore>
-          <forkCount>2</forkCount>
-          <reuseForks>true</reuseForks>
-          <argLine>${surefireArgLine}</argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            &#45;&#45;illegal-access=permit-->
+<!--          </argLine>-->
+<!--          <testFailureIgnore>true</testFailureIgnore>-->
+<!--          <forkCount>2</forkCount>-->
+<!--          <reuseForks>true</reuseForks>-->
+<!--          <argLine>${surefireArgLine}</argLine>-->
+<!--        </configuration>-->
       </plugin>
 
-
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
 
 
 
@@ -155,6 +141,24 @@
 <!--        </executions>-->
 <!--      </plugin>-->
 
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.12</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
 
     </plugins>
